        both can be followed by an table of issues starting with "fixed issues:" followed by an list of grouped after
        first obscures of the bug the list of issues with an short description and when based on an github bug report
        its id.


changelog of snapshot [next] (theme: )


changelog of snapshot 20w28a released on 08.07.2020 (theme: fixing stuff & upgrading base to 1.16)
    - updated textures to 1.16 and added content of the update

    Rendering:
        - improved rendering system by using MatrixStack's and RenderingHelper-instances
        - changed how item textures are baked together
        - added button to delete world in world selection screen

    World Format:
        - improved data fixer system

    Gameplay:
        - SHIFT-drag support in inventories

    Commands:
        - improved command handling
        - added /execute in <dimension id> sub-command
        - /teleport allows now the player to also change dimension

    Data Gen:
        - deprecated old AdvancedBlockFactory system
        - added CombinedBlockFactory system for doing fancy stuff with data gen & in-game objects at ones
        - added --enable-all-blocks runtime flag for enabling all optional blocks

    Profiler:
        - added profiler for world generation

    Registries:
        - registries get now "locked" after mod loading finished (they are still write-able, but this will get removed in
            the future as it will get replaced by reload-registries-events)

    World Generation:
        - implemented base generator for the nether

    fixed issues:
        from previous snapshot:
            - ordering of world selection list was wrong
            - world selection screen was not rendering all possible worlds
            - ShiftContainer was miss-behaving in certain cases
            - registry info was not dumping data correctly
            - exceptions when no save file exists
            - data fixer results may not be saved correctly