@@ -1203,3 +1203,6 @@ sstarted these clone on 12th of July, 2019
 [uuk]: added helper functions to RenderingHelper for setting alpha on/off
 [uuk]: prebuilding will now enable data gen
 [uuk]: released snapshot 20w28a
+
+[uuk]: added ToolTips to items which are translated (if possible), can be colored, ...
+[uuk]: added corresponding extension functions to Item-class and ItemFactory-system
