@@ -53,10 +53,11 @@ information on development:
 
 
 changelog of snapshot [next] (theme: )
+    - added tooltip system for items with their backends at Item-class and factory methods at ItemFactory
 
 
 changelog of snapshot 20w28a released on 08.07.2020 (theme: fixing stuff & upgrading base to 1.16)
-    - updated textures to 1.16 and added content of the update
+    updated resources to 1.16 and added (some) content of the update
 
     Rendering:
         - improved rendering system by using MatrixStack's and RenderingHelper-instances
